--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -60,7 +60,7 @@
                 </div><br>
                 <div class="form-group col-md-12">
                   <label for="{{ form.quantity.id_for_label }}">{{ form.quantity.label }}*</label>
-                  {% if form.status.value is None or form.status.value == 1 or user|has_product_perm:'change_product_status' %}
+                  {% if form.status.value is None or form.status.value == 1 or user|has_product_perm:'change_product_status' and form.collaborator.value|check_collaborator:user %}
                     {% trans "Digite a quantidade" as quantity %}
                   <input type="number" class="form-control menor quantity_validate" id="{{ form.quantity.id_for_label }}" name="{{ form.quantity.html_name }}" placeholder="{{ quantity }}..." value="{% if form.quantity.value %}{{ form.quantity.value|unlocalize }}{% endif %}">
                   {% for error in form.quantity.errors %}
@@ -71,7 +71,7 @@
                     <input type="hidden" name="{{ form.quantity.html_name }}" value="{% if form.quantity.value %}{{ form.quantity.value|unlocalize }}{% endif %}">
                   {% endif %}
                 </div><br>
-              {% if user|has_product_perm:'change_product_status' %}
+              {% if user|has_product_perm:'change_product_status' and form.collaborator.value|check_collaborator:user %}
                 <div class="form-group col-md-12">
                   <label for="{{ form.quantity_partial.id_for_label }}">{{ form.quantity_partial.label }}</label>
                     {% trans "Digite a quantidade parcial" as quantity_partial %}
@@ -111,7 +111,7 @@
                     <label id="edd_date-error" class="error" for="{{ form.edd_date.id_for_label }}">{{ error|escape }}</label>
                   {% endfor %}
                 </div><br>
-                {% if user|has_product_perm:'change_product_status' %}
+                {% if user|has_product_perm:'change_product_status' and form.collaborator.value|check_collaborator:user %}
                 <div class="form-group col-md-12">
                   <label for="{{ form.best_before.id_for_label }}">{{ form.best_before.label }}</label>
                     {% trans "Data de Validade" as best_before %}
@@ -144,7 +144,7 @@
                     <label id="condition-error" class="error" for="{{ form.condition.id_for_label }}">{{ error|escape }}</label>
                   {% endfor %}
                 </div><br>
-                {% if user|has_product_perm:'change_product_status' %}
+                {% if user|has_product_perm:'change_product_status' and form.collaborator.value|check_collaborator:user %}
                 <div class="form-group col-md-12">
                   <label for="{{ form.actual_condition.id_for_label }}">{{ form.actual_condition.label }}</label>
                     {% select_condition form.actual_condition.value '1' as new_condition %}
