Ajustes termos e condições de uso

--- a/html/templates/terms.html
+++ b/html/templates/terms.html
@@ -50,7 +50,7 @@
                         <p>
                             <strong>4- Assinatura</strong></p>
                         <p>Somente usuários cadastrados e que optem pela assinatura podem utilizar as funcionalidades oferecidas pelo VOI Services. Os usuários que optem por serem assinantes devem realizar solicitação através do seu cadastro marcando a opção designada. O usuário terá seu status alterado para assinante após o pagamento da primeira mensalidade e autorizado pelo VOI Services.</p>
-                        <p>O usuário assinante pode solicitar o cancelamento de sua assinatura a qualquer tempo. Para isso, o mesmo deve enviar solicitação de cancelamento através de email oficial de atendimento support@voiservices.com. O usuário que solicitar cancelamento deverá efetuar o pagamento dos dias relativos ao mês em curso.</p>
+                        <p>O usuário assinante pode solicitar o cancelamento de sua assinatura a qualquer tempo. Para isso, o mesmo deve enviar solicitação de cancelamento através de email oficial de atendimento support@voiservices.com. O VOI Services não fará estorno de valores pagos de mensalidade. Após a solicitção de cancelamento, o assinante ficará ativo até o próximo vencimento.</p>
                         <p>O valor da assinatura é de $54,90 USD por mês</p>
                         <p>&nbsp;</p>
                         <p>
@@ -66,7 +66,8 @@
                         <p><strong>- Produto no estoque VOI a partir do quarto dia até 10 dias: USD 1,29 por produto<br />
                             - Produto no estoque VOI Services de 11 até 20 dias: USD 1,49 por produto<br>
                             - Produto no estoque VOI Services de 21 até 30 dias: USD 1,99 por produto<br>
-                            - Após 30 dias entrar Services em contato com o nosso suporte.</strong></p>
+                            - Após 30 dias entrar em contato com o nosso suporte.</strong><br>
+                            - Após 90 dias os produtos serão descartados para que o VOI Services seja ressarcido das despesas com armazenagem dos produtos.</strong></p>
                         <p>
                             &nbsp;</p>
 
@@ -140,7 +141,7 @@
                         <p>O Voi services realiza o delivery utilizando os transportadores autorizados pela Amazon sendo eles UPS, USPS, FEDEX e DHL.</p>
                         <p>
                             <br />
-                            <strong>Data de atualiza&ccedil;&atilde;o: </strong>26 de Janeiro de 2018</p>
+                            <strong>Data de atualiza&ccedil;&atilde;o: </strong>14 de Junho de 2018</p>
 
                     </div>
                 </div>
