ajuste do domínio para lots.voiservices.com

--- a/html/templates/faq.html
+++ b/html/templates/faq.html
@@ -41,7 +41,7 @@
                                 <div id="en1">
                                     <p><strong>1. Comprei meus produtos. E agora? Como envio para amazon?</strong></p>
                                     <p>Faça download do nosso guia para você que não sabe como enviar seus produtos na nossa plataforma.</p>
-                                    <a class="btn btn-default" target="_blank" href="https://voiservices.com/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf"><i class="fa fa-file-pdf-o"></i> Download Guia</a>
+                                    <a class="btn btn-default" target="_blank" href="/pt/ajuda/voi-services-da-compra-ao-envio-para-amazon.pdf"><i class="fa fa-file-pdf-o"></i> Download Guia</a>
                                 </div>
                                 <div id="en2">
                                     <p><strong>2. Como enviar para apenas uma warehouse da Amazon meus produtos?</strong></p>
