--- a/html/templates/help.html
+++ b/html/templates/help.html
@@ -19,17 +19,17 @@
                     </ul>
                     <div class="tab-content">
                         <div id="cadastro" class="tab-pane active">
-                            <p>Muito simples. Para se cadastrar na plataforma basta acessar a url <a href="https://voiservices.com/pt/usuario/cadastro/" class="download">https://voiservices.com/pt/usuario/cadastro/</a>, preencher os campos e aceitar nossos termos e em menos de 1 minuto você já será um usuário da nossa plataforma.</p>
+                            <p>Muito simples. Para se cadastrar na plataforma basta acessar a url <a href="/pt/usuario/cadastro/" class="download">https://lots.voiservices.com/pt/usuario/cadastro/</a>, preencher os campos e aceitar nossos termos e em menos de 1 minuto você já será um usuário da nossa plataforma.</p>
                             <br>
                             <img src="/static/img/print-cad.png" class="img-ajuda-center"/><br><br>
                             <p>Após o cadastro, você receberá um email de confirmação.</p>
                             <p><strong>Para se tornar assinante, voce precisa solicitar marcando a opcao</strong></p>
                         </div>
                         <div id="login" class="tab-pane fade">
-                            <p>Basta acessar a url <a href="https://prepshiptool.com/pt/entrar/" class="download">https://prepshiptool.com/pt/entrar/</a> e digitar o seu login e senha inseridos no momento do seu cadastro.</p>
+                            <p>Basta acessar a url <a href="/pt/entrar/" class="download">https://lots.voiservices.com/pt/entrar/</a> e digitar o seu login e senha inseridos no momento do seu cadastro.</p>
                             <br>
                             <h5>Esqueci minha senha</h5>
-                            <p>Basta acessar a url <a href="https://prepshiptool.com/pt/entrar/" class="download">https://prepshiptool.com/pt/entrar/</a> e clicar no link "Esqueci minha senha".</p>
+                            <p>Basta acessar a url <a href="/pt/entrar/" class="download">https://lots.voiservices.com/pt/entrar/</a> e clicar no link "Esqueci minha senha".</p>
                             <br>
                             <img src="../../..//static/img/print-login.png" class="img-ajuda-center img-ajuda-center-menor"/><br><br>
                         </div>
