--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -37,7 +37,7 @@
                          <p><strong>{% trans "Armazenamento FBM" %}</strong></p>
                          <p>{% trans "Você escolheu deixar seus produtos armazenados conosco até serem vendidos para seus clientes. Lembre-se que com essa escolha você aceita os custos
                          relativos a armazenagem a partir do momento em que o produto chegar. Os valores são:" %}</p>
-                         <p><strong>{% trans "Storage:</strong> {% trans "$0.40 por feet cubico / Mês - Mínimo é de $25.00/Mês" %}</p>
+                         <p><strong>{% trans "Storage:</strong> {% trans "$ 6.00 por pé cubico / Mês - Mínimo é de $ 25.00/Mês" %}</p>
                          <p>* {% trans "Caso a soma do espaço ocupado por seus produtos dê menos de $25.00, será cobrado essa taxa mínima." %}</p>
                          <p>* {% trans "Caso o pagamento mensal não seja efetuado por 90 dias, os produtos serão doados." %}</p>
                      </div>
@@ -46,9 +46,9 @@
                      <div class="alert alert-warning">
                          <p><strong>{% trans "Armazenamento FBA" %}</strong></p>
                          <p>{% trans "Você escolheu por realizar envio FBA. A partir do momento que os seus produtos chegarem na nossa warehouse, você terá
-                         11 dias para criar o envio. Caso não seja realizado, você terá que pagar pelo armazenamento. Consulte valores no nosso" %}
-                         <a href="/" class="download">{% trans "site" %}</a>.</p>
-                         <p>* {% trans "Caso os produtos não sejam enviados e as taxas de storage não sejam quitadas após 60 dias os produtos serão doados." %}</p>
+                         11 dias para criar o envio. Caso não seja realizado, haverá taxa de $ 0.30 por item no momento do envio. Consulte valores no nosso" %}
+                         <a href="/pt/#prices" class="download">{% trans "site" %}</a>.</p>
+                         <p>* {% trans "Caso os produtos não sejam enviados, após 60 dias, os produtos serão doados." %}</p>
                      </div>
                   </div>
                 <br>
