--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -22,6 +22,18 @@
                         <label for="filtro-id">{{ id }}</label>
                         <input type="text" class="form-control" id="filtro-id" name="id" placeholder="{{ id }}..." value="{{ filter_values.id }}">
                     </div>
+
+                   <!-- Filtro novo tipo de envio-->
+                    <div class="form-group col-md-3">
+
+                        <label for="filtro-tipo">Tipo de Envio</label>
+                        <select class="form-control" id="filtro-tipo" name="tipo">
+                          <option value="">Tipo de Envio...</option>
+                          <option value="1">{% trans "FBA" %}</option>
+                          <option value="2">{% trans "FBM" %}</option>
+                        </select>
+                    </div>
+
                     <div class="form-group col-md-3">
                         {% trans "Nome" as name %}
                         <label for="filtro-nome">{{ name }}</label>
@@ -103,6 +115,7 @@
                  </p>
              </div>
           </div>
+
           {% if user|has_product_perm:'add_product' or request.session.impersonated is not None %}
             <a class="btn btn-default" href="{% url 'product_add' %}"><i class="fa fa-fw fa-plus-square"></i> {% trans "Adicionar Produto" %}</a>
           {% endif %}
@@ -113,10 +126,14 @@
           {% if user|has_shipment_perm:'add_fbm_shipment' %}
             <a class="btn btn-default" id="btn-add-merchant-shipment" data-action-url="{% url 'merchant_shipment_add' %}"><i class="fa fa-ship"></i> {% trans "Criar Envio Merchant" %}</a>
           {% endif %}
-{% comment %}
-            <!-- Novo botao -->
-            <a class="btn btn-default" id="btn-add-shipment-brazil"><i class="fa fa-globe"></i> {% trans "Criar Envio para o Brasil" %}</a>
-{% endcomment %}
+
+            <!-- Novo botao verificar espaço ocupado -->
+            <a class="btn btn-primary" id="ver-espaco" href="javascript:void(0)"><i class="fa fa-fw fa-th"></i> Verificar Espaço ocupado FBM</a>
+
+            {% comment %}
+                <!-- Novo botao -->
+                <a class="btn btn-default" id="btn-add-shipment-brazil"><i class="fa fa-globe"></i> {% trans "Criar Envio para o Brasil" %}</a>
+            {% endcomment %}
           {% if user|has_shipment_perm:'add_shipment' or user|has_shipment_perm:'add_fbm_shipment' %}
             <form action="" method="post" class="form-add-shipment" id="form-add-shipment">
                 {% csrf_token %}
@@ -131,6 +148,14 @@
                       {% trans "Ordenar pelo ID" as order_id %}
                       <a title="{{ order_id }}" href="javascript:void(0);">{{ id }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
+
+                    <!-- Nova coluna Tipo de envio FBA ou FBM-->
+                    <th>
+                      <a title="{{ order_id }}" href="javascript:void(0);">Tipo <i class="fa fa-fw fa-sort-amount-asc"></i></a>
+                  </th>
+
+
+
                   <th>
                       {% trans "Ordenar pelo nome" as order_name %}
                       <a title="{{ order_name }}" href="javascript:void(0);">{{ name }} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
@@ -164,6 +189,10 @@
                 {% for product in products %}
                 <tr>
                   <td>{{ product.id }}</td>
+
+                    <!-- Nova coluna Tipo de envio -->
+                    <td>FBA</td>
+
                   <td class="limit-field row-pick-ticket-display">
                       {{ product.name }}
                       {% if user|has_product_perm:'change_product_status' and product.pick_ticket %}
@@ -335,5 +364,27 @@
         {% endif %}
       </div>
     </div>
+
+<!-- Popup com o histórico de cubagem utilizada -->
+
+
+<div id="espaco" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"><i class="fa fa-fw fa-frown-o"></i> Verifique o Histórico de ocupação dos seus Produtos</h4>
+            </div>
+            <div class="modal-body">
+                <p>03/07/18 - 20 pés cúbicos</p>
+                <p>15/07/18 - 30 pés cúbicos</p>
+                <p>30/07/18 - 20 pés cúbicos</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
