--- a/html/templates/product_stock_fbm.html
+++ b/html/templates/product_stock_fbm.html
@@ -1,6 +1,6 @@
 {% extends 'includes/layout.html' %}
 {% load i18n permissions products users shipments commons lots %}
-{% block productlist %}active{% endblock %}
+{% block productfbmlist %}active{% endblock %}
 
 {% block conteudo %}
 
@@ -11,7 +11,7 @@
 
         </div>
         <div class="col-md-11 main">
-          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Estoque FBA" %}</h1>
+          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Estoque FBM" %}</h1>
           <div class="row">
               <div class="filtros col-md-12">
                 <h3><i class="fa fa-filter"></i> {% trans "Filtros" %}</h3>  <br>
@@ -107,13 +107,15 @@
             <a class="btn btn-default" href="{% url 'product_add' %}"><i class="fa fa-fw fa-plus-square"></i> {% trans "Adicionar Produto" %}</a>
           {% endif %}
           {% if products.paginator.count > 0 %}
+{% comment %}
           {% if user|has_shipment_perm:'add_shipment' %}
             <a class="btn btn-default" id="btn-add-shipment" data-action-url="{% url 'shipment_add' %}"><i class="fab fa-amazon"></i> {% trans "Criar Envio para Amazon" %}</a>
           {% endif %}
-{% comment %}
+{% endcomment %}
           {% if user|has_shipment_perm:'add_fbm_shipment' %}
             <a class="btn btn-default" id="btn-add-merchant-shipment" data-action-url="{% url 'merchant_shipment_add' %}"><i class="fa fa-ship"></i> {% trans "Criar Envio Merchant" %}</a>
           {% endif %}
+{% comment %}
             <!-- Novo botao -->
             <a class="btn btn-default" id="btn-add-shipment-brazil"><i class="fa fa-globe"></i> {% trans "Criar Envio para o Brasil" %}</a>
 {% endcomment %}
